2022-10-27  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-insn.def (isn): Remove instruction because we
	already have the `nnn' instruction.
	* libpoke/pvm.jitter: Likewise.
	* libpoke/pkl-rt.pk (_pkl_print_format_any): Adapt.

2022-10-27  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/hacking.org (How `any' is handed in the PVM): New section.
	* HACKING: Regenerate.

2022-10-27  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-trans.c: Do not include pvm-program.h.

2022-10-27  Arsen Arsenović  <arsen@aarsen.me>

	* bootstrap.conf (libpoke_modules): Add set, xset and
	linkedhash-set.
	* libpoke/pkl-ast.c (pkl_ast_node_free): Allocate a visitation
	set, and move most code...
	(pkl_ast_node_free_1): ... to here, so that we can track and avoid
	freed nodes.  Also, no longer consult IS_RECURSIVE for lifetime
	information.
	* testsuite/poke.pkl/recursion-bad-1.pk: New test.
	* testsuite/poke.pkl/recursion-bad-2.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add the new tests.

2022-10-27  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke.rec (Fix %destructors in parser): Removed as DONE.
	(Do not leak decl AST nodes in parser): Likewise.

2022-10-27  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y (integer): New rule.
	(primary): Use it.
	(integral_type_specifier): Likewise.
	(offset_type_specifier): Likewise.
	* testsuite/poke.pkl/offsets-diag-3.pk: New test.
	* testsuite/poke.pkl/int-type-diag-3.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-10-27  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-rt.pk (_pkl_print_format_any): Fix array boundary
	for types.

2022-10-26  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-rt.pk (_pkl_print_format_any): Handle PVM types.

2022-10-26  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen-attrs.pks (attr_size): Add `typof' and `nip'
	instructions around `tyis*` instructions.
	(attr_eoffset): Likewise.
	(attr_esize): Likewise.